third_party/rust/linkme/v0_3/crate/tests/ui/unsupported_item.stderr
error: distributed element must be either static or function item
 --> tests/ui/unsupported_item.rs:9:1
  |
9 | extern crate std as _std;
  | ^^^^^^^^^^^^^^^^^^^^^^^^^
